--- a/Algorhythm/Algorhythm/Base.lproj/LaunchScreen.storyboard
+++ b/Algorhythm/Algorhythm/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A279b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,8 +15,40 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kcc-on-mdH">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="301"/>
+                                <animations/>
+                                <color key="backgroundColor" red="0.1803921568627451" green="0.20392156862745098" blue="0.22352941176470587" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BpG-Rd-3Df">
+                                <rect key="frame" x="0.0" y="299" width="600" height="301"/>
+                                <animations/>
+                                <color key="backgroundColor" red="0.12549019607843137" green="0.14117647058823529" blue="0.15686274509803921" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Launch Icon" translatesAutoresizingMaskIntoConstraints="NO" id="rKc-ro-fP5">
+                                <rect key="frame" x="240" y="240" width="120" height="120"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="5i2-8p-nSo"/>
+                                    <constraint firstAttribute="width" constant="120" id="EEy-Xg-7Xn"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="kcc-on-mdH" secondAttribute="trailing" id="GKG-JT-mEj"/>
+                            <constraint firstItem="rKc-ro-fP5" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Jkp-MI-fye"/>
+                            <constraint firstItem="BpG-Rd-3Df" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="Mm1-Fr-tAq"/>
+                            <constraint firstItem="kcc-on-mdH" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="Mvy-oz-ed7"/>
+                            <constraint firstItem="rKc-ro-fP5" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="PVs-rg-n4n"/>
+                            <constraint firstItem="BpG-Rd-3Df" firstAttribute="top" secondItem="kcc-on-mdH" secondAttribute="bottom" constant="-2" id="PhN-OV-mHF"/>
+                            <constraint firstItem="kcc-on-mdH" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="PuW-V3-wiN"/>
+                            <constraint firstItem="BpG-Rd-3Df" firstAttribute="height" secondItem="kcc-on-mdH" secondAttribute="height" id="XSH-tA-tuM"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="BpG-Rd-3Df" secondAttribute="bottom" id="iqf-NX-ngc"/>
+                            <constraint firstAttribute="trailing" secondItem="BpG-Rd-3Df" secondAttribute="trailing" id="zuH-jQ-Whn"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +56,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Launch Icon" width="120" height="120"/>
+    </resources>
 </document>
